Working on analysis script + some updates in the yaml output from simulator

--- a/bokeh_server/trace_analysis.ipynb
+++ b/bokeh_server/trace_analysis.ipynb
@@ -11,11 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import yaml\n",
+    "import datetime as dt\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -32,20 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## IMPORT IO TRACES AND CREATE TWO DATAFRAMES\n",
+    "\n",
     "io_traces = None\n",
     "with open(\"io_operations.yml\", \"r\", encoding=\"utf-8\") as traces:\n",
     "    io_traces = yaml.load(traces, Loader=yaml.SafeLoader)\n",
-    "    \n",
-    "# Print first job trace\n",
-    "print(io_traces[2])\n",
-    "\n",
     "\n",
     "job_columns = [\n",
-    "    \"job_id\", \n",
+    "    \"job_id\",\n",
+    "    \"job_uid\"\n",
     "    \"job_status\", \n",
     "    \"job_submit_ts\", \n",
     "    \"job_end_ts\", \n",
@@ -78,49 +78,156 @@
     "    \"dst_file_path\",\n",
     "    \"dst_file_name\",\n",
     "    \"dst_file_size_bytes\",\n",
+    "    \"parent_job_id\",\n",
     "]\n",
     "\n",
+    "# DATAFRAME WITH JOBS ONLY\n",
+    "jobs = pd.DataFrame(io_traces, columns=job_columns)\n",
     "\n",
     "\n",
     "\n",
-    "pd.DataFrame(io_traces, columns=job_columns)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are various application handlers that can be used to build up Bokeh documents. For example, there is a `ScriptHandler` that uses the code from a `.py` file to produce Bokeh documents. This is the handler that is used when we run `bokeh serve app.py`. In the notebook we can use a function to define a Bokeh application.\n",
-    "\n",
-    "Here is the function `bkapp(doc)` that defines our app:"
+    "# Merge all actions into a second DataFrame, with new \"parent_job_id\" field associated to each one.\n",
+    "action_list = []\n",
+    "for trace in io_traces:\n",
+    "    local_actions = trace[\"job_actions\"]\n",
+    "    for l_act in local_actions:\n",
+    "        l_act[\"parent_job_id\"] = trace[\"job_id\"]\n",
+    "        if not \"src_storage_service\" in l_act:\n",
+    "            l_act[\"src_storage_service\"] = \"NA\"\n",
+    "            l_act[\"src_storage_server\"] = \"NA\"\n",
+    "            l_act[\"src_storage_disk\"] = \"NA\"\n",
+    "            l_act[\"src_file_path\"] = \"NA\"\n",
+    "            l_act[\"src_file_name\"] = \"NA\"\n",
+    "            l_act[\"src_file_size_bytes\"] = 0\n",
+    "        if not \"dst_storage_service\" in l_act:\n",
+    "            l_act[\"dst_storage_service\"] = \"NA\"\n",
+    "            l_act[\"dst_storage_server\"] = \"NA\"\n",
+    "            l_act[\"dst_storage_disk\"] = \"NA\"\n",
+    "            l_act[\"dst_file_path\"] = \"NA\"\n",
+    "            l_act[\"dst_file_name\"] = \"NA\"\n",
+    "            l_act[\"dst_file_size_bytes\"] = 0\n",
+    "        action_list.append(l_act)\n",
+    "        \n",
+    "# DATAFRAME WITH ACTIONS ONLY\n",
+    "actions = pd.DataFrame(action_list, columns=action_columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "jobs = jobs.sort_values(\"job_submit_ts\")\n",
+    "jobs[\"job_submit_td\"] = jobs[\"job_submit_ts\"].apply(pd.to_timedelta, unit=\"s\")\n",
+    "jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actions = actions.sort_values(\"act_start_ts\")\n",
+    "\n",
+    "# Create Timedelta columns from timestamp, in order to display data with valid date range in following plots\n",
+    "actions[\"act_start_td\"] = actions[\"act_start_ts\"].apply(pd.to_timedelta, unit=\"s\")\n",
+    "actions[\"act_end_td\"] = actions[\"act_end_ts\"].apply(pd.to_timedelta, unit=\"s\")\n",
+    "\n",
+    "print(f\"# First action registered on {dt.datetime.fromtimestamp(actions['act_start_ts'].min())}\")\n",
+    "print(f\"# Last action ends on {dt.datetime.fromtimestamp(actions['act_end_ts'].max())}\")\n",
+    "\n",
+    "actions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    " \n",
+    "from bokeh.models import ColumnDataSource, RangeTool, DatetimeTickFormatter, NumeralTickFormatter\n",
+    "from bokeh.transform import factor_cmap, factor_mark\n",
+    "\n",
+    "\n",
+    "VERBOSE_DT_FORMATTER = DatetimeTickFormatter(days='%d/%m', hours=\"%d/%m - %Hh\", hourmin='%H:%M', minutes = '%H:%M')\n",
+    "BYTE_FORMATTER = NumeralTickFormatter(format='0.0b')\n",
+    "\n",
+    "\n",
     "def bkapp(doc):\n",
-    "    df = sea_surface_temperature.copy()\n",
+    "    df = actions.copy()\n",
     "    source = ColumnDataSource(data=df)\n",
     "\n",
-    "    plot = figure(x_axis_type='datetime', y_range=(0, 25),\n",
-    "                  y_axis_label='Temperature (Celsius)',\n",
-    "                  title=\"Sea Surface Temperature at 43.18, -70.43\")\n",
-    "    plot.line('time', 'temperature', source=source)\n",
+    "    DT_X_RANGE = (df[\"act_start_td\"].min(), df[\"act_start_td\"].max())\n",
+    "    \n",
+    "    # TIMELINE WITH VARIOUS METRICS\n",
+    "    p = figure(\n",
+    "        title=\"R/W Volume\", \n",
+    "        height=300, \n",
+    "        width=800, \n",
+    "        tools=[\"xpan\", \"save\", \"reset\", \"box_zoom\", \"pan\", \"zoom_out\"],\n",
+    "        x_axis_location=\"above\",\n",
+    "        background_fill_color=\"#efefef\", \n",
+    "        x_range=DT_X_RANGE\n",
+    "    )\n",
+    "    \n",
+    "    p.vbar(x='act_start_td', top='src_file_size_bytes', source=source , width=0.9)\n",
+    "    \n",
+    "    # p.line('act_start_td', 'src_file_size_bytes', source=source, line_color=(0, 128, 255, 0.5), line_width=2)\n",
+    "    # p.line('act_start_td', 'dst_file_size_bytes', source=source, line_color=(128, 255, 0, 0.5), line_width=2)\n",
+    "    p.yaxis.axis_label = 'Byte size of file'\n",
+    "    p.xaxis.formatter = VERBOSE_DT_FORMATTER\n",
+    "    p.yaxis.formatter = BYTE_FORMATTER\n",
+    "    \n",
     "\n",
+    "    TYPES = [\"FILECOPY\", \"FILEREAD\", \"COMPUTE\", \"FILEWRITE\", \"FILEDELETE\"]\n",
+    "    #TYPES = sorted(df.act_type.unique())\n",
+    "    p2 = figure(\n",
+    "        title=\"ActionTypes\", \n",
+    "        height=300, \n",
+    "        width=800, \n",
+    "        tools=[\"xpan\", \"save\", \"reset\", \"box_zoom\", \"pan\", \"zoom_out\"],\n",
+    "        x_axis_location=\"above\",\n",
+    "        background_fill_color=\"#efefef\", \n",
+    "        x_range=p.x_range, \n",
+    "        y_range=TYPES[::-1]\n",
+    "    )\n",
+    "\n",
+    "    MARKERS = ['hex', 'circle_x', 'triangle', 'plus', 'diamond']\n",
+    "    p2.scatter(\"act_start_td\", \"act_type\", source=source,\n",
+    "          legend_group=\"act_type\", fill_alpha=0.3, size=12,\n",
+    "          marker=factor_mark('act_type', MARKERS, TYPES),\n",
+    "          color=factor_cmap('act_type', 'Category10_5', TYPES))\n",
+    "    p2.yaxis.axis_label = 'Action Type'\n",
+    "    p2.xaxis.formatter = VERBOSE_DT_FORMATTER\n",
+    "    \n",
+    "    select = figure(title=\"Range selection plot\",\n",
+    "                height=100, width=800, y_range=p.y_range, y_axis_type=None,\n",
+    "                tools=\"\", toolbar_location=None, background_fill_color=\"#efefef\")\n",
+    "    \n",
+    "    range_tool = RangeTool(x_range=p.x_range)\n",
+    "    range_tool.overlay.fill_color = \"navy\"\n",
+    "    range_tool.overlay.fill_alpha = 0.1\n",
+    "\n",
+    "    select.line('act_start_td', 'src_file_size_bytes', source=source, line_color=(255, 128, 0, 0.5))\n",
+    "    select.line('act_start_td', 'dst_file_size_bytes', source=source, line_color=(128, 255, 0, 0.5))\n",
+    "    select.ygrid.grid_line_color = None\n",
+    "    select.xaxis.formatter = VERBOSE_DT_FORMATTER\n",
+    "    select.yaxis.formatter = BYTE_FORMATTER\n",
+    "    select.add_tools(range_tool)\n",
+    "    select.toolbar.active_multi = range_tool\n",
+    "    \n",
     "    def callback(attr, old, new):\n",
     "        if new == 0:\n",
     "            data = df\n",
     "        else:\n",
-    "            data = df.rolling('{0}D'.format(new)).mean()\n",
+    "            data = df\n",
     "        source.data = ColumnDataSource.from_df(data)\n",
     "\n",
-    "    slider = Slider(start=0, end=30, value=0, step=1, title=\"Smoothing by N Days\")\n",
-    "    slider.on_change('value', callback)\n",
-    "\n",
-    "    doc.add_root(column(slider, plot))\n",
+    "    doc.add_root(column(p, p2, select))\n",
     "\n",
     "    doc.theme = Theme(json=yaml.load(\"\"\"\n",
     "        attrs:\n",
@@ -128,8 +235,8 @@
     "                background_fill_color: \"#DDDDDD\"\n",
     "                outline_line_color: white\n",
     "                toolbar_location: above\n",
-    "                height: 500\n",
-    "                width: 800\n",
+    "                height: 700\n",
+    "                width: 1200\n",
     "            Grid:\n",
     "                grid_line_dash: [6, 4]\n",
     "                grid_line_color: white\n",
@@ -147,12 +254,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "show(bkapp) # notebook_url=\"http://localhost:8888\" "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
