--- a/bokeh_server/trace_analysis.ipynb
+++ b/bokeh_server/trace_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,11 +19,13 @@
     "import datetime as dt\n",
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "from bokeh.layouts import column\n",
-    "from bokeh.models import ColumnDataSource, Slider\n",
+    "from bokeh.models import ColumnDataSource, Slider, LabelSet\n",
     "from bokeh.plotting import figure\n",
     "from bokeh.themes import Theme\n",
+    "from bokeh.palettes import Spectral4\n",
     "from bokeh.io import show, output_notebook\n",
     "\n",
     "from bokeh.sampledata.sea_surface_temperature import sea_surface_temperature\n",
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## IMPORT STORAGE SERVICE ORIENTED IO TRACES AND CREATE TWO DATAFRAMES\n",
+    "\n",
+    "io_traces_storage_service = None\n",
+    "with open(\"storage_service_operations.yml\", \"r\", encoding=\"utf-8\") as traces:\n",
+    "    io_traces_storage_service = yaml.load(traces, Loader=yaml.SafeLoader)\n",
+    "    \n",
+    "ss_io_columns = [\n",
+    "    \"ts\",\n",
+    "    \"action_type\",\n",
+    "    \"action_name\",\n",
+    "    \"storage_service\",\n",
+    "    \"disk\",\n",
+    "    \"volume_change_bytes\",\n",
+    "    \"total_allocation_server\",\n",
+    "    \"total_used_volume_bytes_server\",\n",
+    "    \"total_allocation_disk\",\n",
+    "    \"total_used_volume_bytes_disk\",\n",
+    "]\n",
+    "\n",
+    "actions_detail = pd.DataFrame(io_traces_storage_service, columns=ss_io_columns)\n",
+    "actions_detail = actions_detail.sort_values(\"ts\")\n",
+    "actions_detail[\"ts\"] = actions_detail[\"ts\"].apply(pd.to_timedelta, unit=\"s\")\n",
+    "actions_detail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get mulitple sub-dataframes, one for each storage service in use in our data\n",
+    "details_by_storageservice = actions_detail.groupby('storage_service', axis=0)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract a dataframe for each type of action\n",
+    "\n",
+    "copy_actions_detail = actions_detail[actions_detail[\"action_type\"] == \"FILECOPY\"]\n",
+    "write_actions_detail = actions_detail[actions_detail[\"action_type\"] == \"FILEWRITE\"]\n",
+    "delete_actions_detail = actions_detail[actions_detail[\"action_type\"] == \"FILEDELETE\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,26 +211,76 @@
     "\n",
     "VERBOSE_DT_FORMATTER = DatetimeTickFormatter(days='%d/%m', hours=\"%d/%m - %Hh\", hourmin='%H:%M', minutes = '%H:%M')\n",
     "BYTE_FORMATTER = NumeralTickFormatter(format='0.0b')\n",
+    "TYPES = [\"FILECOPY\", \"FILEREAD\", \"COMPUTE\", \"FILEWRITE\", \"FILEDELETE\"]\n",
+    "IO_TYPES = [\"FILECOPY\", \"FILEREAD\", \"FILEWRITE\", \"FILEDELETE\"]\n",
+    "IO_TYPES_NO_READ = [\"FILECOPY\", \"FILEWRITE\", \"FILEDELETE\"]\n",
     "\n",
     "\n",
     "def bkapp(doc):\n",
+    "    \n",
+    "    # General DataFrame\n",
     "    df = actions.copy()\n",
     "    source = ColumnDataSource(data=df)\n",
+    "    \n",
+    "    # Details DataFrame\n",
+    "    df_actions_details = actions_detail.copy()\n",
+    "    df_details_source  = ColumnDataSource(data=df_actions_details)\n",
+    "    \n",
+    "    df_copy_details = copy_actions_detail.copy()\n",
+    "    df_copy_source  = ColumnDataSource(data=df_copy_details)\n",
+    "    \n",
+    "    df_write_details = write_actions_detail.copy()\n",
+    "    df_write_source  = ColumnDataSource(data=df_write_details)\n",
+    "    \n",
+    "    df_delete_details = delete_actions_detail.copy()\n",
+    "    df_delete_source  = ColumnDataSource(data=df_delete_details)\n",
+    "    \n",
+    "    DT_X_RANGE = (df[\"act_start_td\"].min() - dt.timedelta(seconds=10000), \n",
+    "                  df[\"act_start_td\"].max() + dt.timedelta(seconds=10000))\n",
     "\n",
-    "    DT_X_RANGE = (df[\"act_start_td\"].min(), df[\"act_start_td\"].max())\n",
     "    \n",
     "    # TIMELINE WITH VARIOUS METRICS\n",
     "    p = figure(\n",
-    "        title=\"R/W Volume\", \n",
+    "        title=\"Cumulative R/W Volume\", \n",
     "        height=300, \n",
-    "        width=800, \n",
+    "        width=950, \n",
     "        tools=[\"xpan\", \"save\", \"reset\", \"box_zoom\", \"pan\", \"zoom_out\"],\n",
     "        x_axis_location=\"above\",\n",
     "        background_fill_color=\"#efefef\", \n",
     "        x_range=DT_X_RANGE\n",
     "    )\n",
     "    \n",
-    "    p.vbar(x='act_start_td', top='src_file_size_bytes', source=source , width=0.9)\n",
+    "    # p.vbar(x='act_start_td', top='src_file_size_bytes', source=source , width=0.9)\n",
+    "\n",
+    "    write_cumsum = df_write_details[\"volume_change_bytes\"].cumsum()\n",
+    "    p.varea(x=df_write_details[\"ts\"], \n",
+    "            y1=np.zeros(write_cumsum.shape[0]), \n",
+    "            y2=write_cumsum, \n",
+    "            alpha=0.8, \n",
+    "            color=(0, 255, 0, 0.5),\n",
+    "            legend_label=\"WRITE\")\n",
+    "    \n",
+    "    copy_cumsum = df_copy_details[\"volume_change_bytes\"].cumsum()\n",
+    "    p.varea(x=df_copy_details[\"ts\"], \n",
+    "            y1=np.zeros(copy_cumsum.shape[0]), \n",
+    "            y2=copy_cumsum, \n",
+    "            alpha=0.8, \n",
+    "            color=(0, 0, 255, 0.5),\n",
+    "            legend_label=\"COPY\")\n",
+    "        \n",
+    "    delete_cumsum = delete_actions_detail[\"volume_change_bytes\"].cumsum()\n",
+    "    p.varea(x=df_delete_details[\"ts\"], \n",
+    "            y1=np.zeros(delete_cumsum.shape[0]), \n",
+    "            y2=delete_cumsum, \n",
+    "            alpha=0.8, \n",
+    "            color=(255, 0, 0, 0.5),\n",
+    "            legend_label=\"DELETE\")\n",
+    "    \n",
+    "    \n",
+    "    p.legend.click_policy=\"hide\"\n",
+    "    \n",
+    "    #p.varea_stack(stackers=TYPES, x=\"ts\")\n",
+    "    \n",
     "    \n",
     "    # p.line('act_start_td', 'src_file_size_bytes', source=source, line_color=(0, 128, 255, 0.5), line_width=2)\n",
     "    # p.line('act_start_td', 'dst_file_size_bytes', source=source, line_color=(128, 255, 0, 0.5), line_width=2)\n",
@@ -182,28 +288,59 @@
     "    p.xaxis.formatter = VERBOSE_DT_FORMATTER\n",
     "    p.yaxis.formatter = BYTE_FORMATTER\n",
     "    \n",
-    "\n",
-    "    TYPES = [\"FILECOPY\", \"FILEREAD\", \"COMPUTE\", \"FILEWRITE\", \"FILEDELETE\"]\n",
-    "    #TYPES = sorted(df.act_type.unique())\n",
     "    p2 = figure(\n",
     "        title=\"ActionTypes\", \n",
     "        height=300, \n",
-    "        width=800, \n",
-    "        tools=[\"xpan\", \"save\", \"reset\", \"box_zoom\", \"pan\", \"zoom_out\"],\n",
+    "        width=950, \n",
+    "        tools=[\"xpan\", \"save\", \"reset\", \"box_zoom\", \"pan\", \"zoom_out\", \"hover\"],\n",
     "        x_axis_location=\"above\",\n",
     "        background_fill_color=\"#efefef\", \n",
     "        x_range=p.x_range, \n",
-    "        y_range=TYPES[::-1]\n",
+    "        # y_range=TYPES[::-1]\n",
     "    )\n",
-    "\n",
-    "    MARKERS = ['hex', 'circle_x', 'triangle', 'plus', 'diamond']\n",
-    "    p2.scatter(\"act_start_td\", \"act_type\", source=source,\n",
-    "          legend_group=\"act_type\", fill_alpha=0.3, size=12,\n",
-    "          marker=factor_mark('act_type', MARKERS, TYPES),\n",
-    "          color=factor_cmap('act_type', 'Category10_5', TYPES))\n",
-    "    p2.yaxis.axis_label = 'Action Type'\n",
+    "    p2.hover.tooltips = [\n",
+    "        (\"Action Type\", \"@action_type\"),\n",
+    "        (\"Bytes Copied/Written/Deleted\", \"@volume_change_bytes\"), \n",
+    "        (\"Target Server\", \"@storage_service\"),\n",
+    "        (\"Target Disk\", \"@disk\")\n",
+    "    ]\n",
+    "    p2.yaxis.axis_label = 'Bytes'\n",
     "    p2.xaxis.formatter = VERBOSE_DT_FORMATTER\n",
+    "    p2.yaxis.formatter = BYTE_FORMATTER\n",
+    "\n",
     "    \n",
+    "    MARKERS = ['circle_y', 'circle_cross', 'circle_x']\n",
+    "    \n",
+    "    p2.scatter(\"ts\", \"volume_change_bytes\", source=df_details_source,\n",
+    "               legend_group=\"action_type\", fill_alpha=0.3, size=12,\n",
+    "               marker=factor_mark('action_type', MARKERS, IO_TYPES_NO_READ),\n",
+    "               color=factor_cmap('action_type', 'Category10_5', IO_TYPES_NO_READ),\n",
+    "               muted_color=factor_cmap('action_type', 'Category10_5', IO_TYPES_NO_READ), muted_alpha=0.2)\n",
+    "\n",
+    "    labels = LabelSet(x=\"ts\", y=\"volume_change_bytes\", text=\"symbol\", y_offset=20,\n",
+    "                  text_font_size=\"11px\", text_color=\"#ffffff\",\n",
+    "                  source=df_details_source, text_align='center')\n",
+    "    p2.add_layout(labels)\n",
+    "    \n",
+    "    STORAGE_SERVICES = df_actions_details[\"storage_service\"].unique()\n",
+    "    \n",
+    "    for service, color in zip(STORAGE_SERVICES, Spectral4):\n",
+    "        p2.line(x=\"ts\", \n",
+    "                y=\"total_used_volume_bytes_server\", \n",
+    "                source=df_actions_details[df_actions_details[\"storage_service\"] == service], \n",
+    "                line_width=2,\n",
+    "                color=color, \n",
+    "                alpha=0.8, \n",
+    "                muted_color=color, \n",
+    "                muted_alpha=0.1, \n",
+    "                legend_label=service)\n",
+    "        \n",
+    "    p2.legend.click_policy=\"mute\"\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # RANGE SELECTION    \n",
     "    select = figure(title=\"Range selection plot\",\n",
     "                height=100, width=800, y_range=p.y_range, y_axis_type=None,\n",
     "                tools=\"\", toolbar_location=None, background_fill_color=\"#efefef\")\n",
@@ -254,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
