On-going heavy modifications to adapt to the major changes in CSS

--- a/bokeh_server/trace_analysis.ipynb
+++ b/bokeh_server/trace_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,20 +22,23 @@
     "import numpy as np\n",
     "\n",
     "from bokeh.layouts import column\n",
-    "from bokeh.models import ColumnDataSource, Slider, LabelSet\n",
+    "from bokeh.models import (ColumnDataSource, Slider, LabelSet, CategoricalColorMapper, DataTable, HoverTool, IntEditor,\n",
+    "                          NumberEditor, NumberFormatter, SelectEditor,\n",
+    "                          StringEditor, StringFormatter, TableColumn)\n",
     "from bokeh.plotting import figure\n",
     "from bokeh.themes import Theme\n",
-    "from bokeh.palettes import Spectral4\n",
+    "from bokeh.palettes import Spectral4, viridis\n",
     "from bokeh.io import show, output_notebook\n",
+    "from bokeh.transform import jitter\n",
+    "import colorcet as cc\n",
     "\n",
-    "from bokeh.sampledata.sea_surface_temperature import sea_surface_temperature\n",
     "\n",
     "output_notebook()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +162,7 @@
     "    \"ts\",\n",
     "    \"action_type\",\n",
     "    \"action_name\",\n",
+    "    \"action_job\",\n",
     "    \"storage_service\",\n",
     "    \"disk\",\n",
     "    \"volume_change_bytes\",\n",
@@ -171,22 +175,36 @@
     "actions_detail = pd.DataFrame(io_traces_storage_service, columns=ss_io_columns)\n",
     "actions_detail = actions_detail.sort_values(\"ts\")\n",
     "actions_detail[\"ts\"] = actions_detail[\"ts\"].apply(pd.to_timedelta, unit=\"s\")\n",
+    "#actions_detail[\"action_job\"] = actions_detail[\"action_job\"].astype('object')\n",
     "actions_detail"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get mulitple sub-dataframes, one for each storage service in use in our data\n",
-    "details_by_storageservice = actions_detail.groupby('storage_service', axis=0)    "
+    "JOB_UIDS = list(set(actions_detail[\"action_job\"].astype(\"string\").tolist()))\n",
+    "print(f\"JOBS UIDS (unique) : {JOB_UIDS}\")\n",
+    "\n",
+    "JOB_UIDS_COLOR = [cc.glasbey_dark[i] for i in range(len(JOB_UIDS))]\n",
+    "print(JOB_UIDS_COLOR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get mulitple sub-dataframes, one for each storage service in use in our data\n",
+    "details_by_storageservice = actions_detail.groupby('storage_service', axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,6 +232,7 @@
     "TYPES = [\"FILECOPY\", \"FILEREAD\", \"COMPUTE\", \"FILEWRITE\", \"FILEDELETE\"]\n",
     "IO_TYPES = [\"FILECOPY\", \"FILEREAD\", \"FILEWRITE\", \"FILEDELETE\"]\n",
     "IO_TYPES_NO_READ = [\"FILECOPY\", \"FILEWRITE\", \"FILEDELETE\"]\n",
+    "MARKERS_ACTION_TYPE = ['circle_y', 'circle_cross', 'circle_x']\n",
     "\n",
     "\n",
     "def bkapp(doc):\n",
@@ -288,6 +307,7 @@
     "    p.xaxis.formatter = VERBOSE_DT_FORMATTER\n",
     "    p.yaxis.formatter = BYTE_FORMATTER\n",
     "    \n",
+    "    \n",
     "    p2 = figure(\n",
     "        title=\"ActionTypes\", \n",
     "        height=300, \n",
@@ -304,24 +324,23 @@
     "        (\"Target Server\", \"@storage_service\"),\n",
     "        (\"Target Disk\", \"@disk\")\n",
     "    ]\n",
+    "    \n",
     "    p2.yaxis.axis_label = 'Bytes'\n",
     "    p2.xaxis.formatter = VERBOSE_DT_FORMATTER\n",
     "    p2.yaxis.formatter = BYTE_FORMATTER\n",
-    "\n",
     "    \n",
-    "    MARKERS = ['circle_y', 'circle_cross', 'circle_x']\n",
     "    \n",
-    "    p2.scatter(\"ts\", \"volume_change_bytes\", source=df_details_source,\n",
-    "               legend_group=\"action_type\", fill_alpha=0.3, size=12,\n",
-    "               marker=factor_mark('action_type', MARKERS, IO_TYPES_NO_READ),\n",
-    "               color=factor_cmap('action_type', 'Category10_5', IO_TYPES_NO_READ),\n",
-    "               muted_color=factor_cmap('action_type', 'Category10_5', IO_TYPES_NO_READ), muted_alpha=0.2)\n",
-    "\n",
-    "    labels = LabelSet(x=\"ts\", y=\"volume_change_bytes\", text=\"symbol\", y_offset=20,\n",
-    "                  text_font_size=\"11px\", text_color=\"#ffffff\",\n",
-    "                  source=df_details_source, text_align='center')\n",
-    "    p2.add_layout(labels)\n",
+    "    ## JOB_UID INDEXED\n",
+    "    p2.scatter(x=\"ts\", y=\"volume_change_bytes\", \n",
+    "               source=df_details_source,\n",
+    "               legend_group=\"action_job\", \n",
+    "               fill_alpha=0.4, \n",
+    "               size=12,\n",
+    "               marker=factor_mark('action_type', MARKERS_ACTION_TYPE, IO_TYPES_NO_READ),\n",
+    "               color=factor_cmap(\"action_job\", cc.glasbey_dark, JOB_UIDS))\n",
     "    \n",
+    "    \n",
+    "    ## STORAGE SERVICE INDEXED\n",
     "    STORAGE_SERVICES = df_actions_details[\"storage_service\"].unique()\n",
     "    \n",
     "    for service, color in zip(STORAGE_SERVICES, Spectral4):\n",
@@ -337,12 +356,42 @@
     "        \n",
     "    p2.legend.click_policy=\"mute\"\n",
     "    \n",
+    "    \"\"\"\n",
+    "    labels = LabelSet(x=\"ts\", y=\"volume_change_bytes\", text=\"symbol\", y_offset=20,\n",
+    "                  text_font_size=\"11px\", text_color=\"#ffffff\",\n",
+    "                  source=df_details_source, text_align='center')\n",
+    "    p2.add_layout(labels)\n",
+    "    \"\"\"\n",
     "    \n",
+    "    action_name = sorted(df_actions_details[\"action_name\"].unique())\n",
+    "    \n",
+    "    columns = [\n",
+    "        TableColumn(field=\"action_name\", title=\"Action Name\",\n",
+    "                editor=SelectEditor(options=action_name),\n",
+    "                formatter=StringFormatter(font_style=\"bold\"))\n",
+    "    ]\n",
+    "    \n",
+    "    \"\"\"\n",
+    "        TableColumn(field=\"model\", title=\"Model\",\n",
+    "                editor=StringEditor(completions=models)),\n",
+    "        TableColumn(field=\"displ\", title=\"Displacement\",\n",
+    "                editor=NumberEditor(step=0.1), formatter=NumberFormatter(format=\"0.0\")),\n",
+    "        TableColumn(field=\"year\", title=\"Year\", editor=IntEditor()),\n",
+    "        TableColumn(field=\"cyl\", title=\"Cylinders\", editor=IntEditor()),\n",
+    "        TableColumn(field=\"trans\", title=\"Transmission\",\n",
+    "                editor=SelectEditor(options=transmissions)),\n",
+    "        TableColumn(field=\"drv\", title=\"Drive\", editor=SelectEditor(options=drives)),\n",
+    "        TableColumn(field=\"class\", title=\"Class\", editor=SelectEditor(options=classes)),\n",
+    "        TableColumn(field=\"cty\", title=\"City MPG\", editor=IntEditor()),\n",
+    "        TableColumn(field=\"hwy\", title=\"Highway MPG\", editor=IntEditor()),\n",
+    "    \"\"\"\n",
+    "    data_table = DataTable(source=df_details_source, columns=columns, editable=True, width=950,\n",
+    "                       index_position=-1, index_header=\"row index\", index_width=60)\n",
     "    \n",
     "    \n",
     "    # RANGE SELECTION    \n",
     "    select = figure(title=\"Range selection plot\",\n",
-    "                height=100, width=800, y_range=p.y_range, y_axis_type=None,\n",
+    "                height=100, width=950, y_range=p.y_range, y_axis_type=None,\n",
     "                tools=\"\", toolbar_location=None, background_fill_color=\"#efefef\")\n",
     "    \n",
     "    range_tool = RangeTool(x_range=p.x_range)\n",
@@ -364,7 +413,7 @@
     "            data = df\n",
     "        source.data = ColumnDataSource.from_df(data)\n",
     "\n",
-    "    doc.add_root(column(p, p2, select))\n",
+    "    doc.add_root(column(p, p2, select, data_table))\n",
     "\n",
     "    doc.theme = Theme(json=yaml.load(\"\"\"\n",
     "        attrs:\n",
@@ -391,26 +440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "show(bkapp) # notebook_url=\"http://localhost:8888\" "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
