--- a/bokeh_server/TreeMap.ipynb
+++ b/bokeh_server/TreeMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a326ad56",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "068513b1",
    "metadata": {},
    "outputs": [],
@@ -57,35 +57,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f50b88c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "dummy = {\n",
-    "    'ts': [1, 1, 10, 10, 1, 1, 10, 10], \n",
-    "    'storage_service_name': [\"storage1\", \"storage1\", \"storage1\", \"storage1\", \"storage2\", \"storage2\", \"storage2\", \"storage2\"], \n",
-    "    'disk': [\"disk0\", \"disk1\", \"disk0\", \"disk1\", \"hdd1\", \"hdd2\", \"hdd1\", \"hdd2\"],\n",
-    "    'capacity': [100, 150, 100, 150, 200, 120, 200, 120], \n",
-    "    'free_space': [100, 150, 90, 110, 200, 120, 80, 20], \n",
-    "    'allocations': [0, 0, 1, 1, 0, 0, 1, 1]\n",
-    "}\n",
-    "df_dummy = pd.DataFrame(dummy).sort_values(by=\"ts\")\n",
-    "df_dummy[\"percent_free\"] = df_dummy[\"free_space\"].mul(100) \n",
-    "df_dummy[\"percent_free\"] = df_dummy[\"percent_free\"] / df_dummy[\"capacity\"] \n",
-    "df_dummy\n",
-    "\"\"\"\n",
-    "\n",
-    "ts_traces = ts_traces.sort_values(by=\"ts\")\n",
+    "ts_traces = ts_traces.sort_values(by=[\"ts\", \"storage_service_name\"])\n",
     "ts_traces[\"percent_free\"] = ts_traces[\"disk_free_space\"].mul(100) \n",
     "ts_traces[\"percent_free\"] = ts_traces[\"percent_free\"] / ts_traces[\"disk_capacity\"] \n",
-    "ts_traces[\"disk_capacity_tb\"] = (ts_traces[\"disk_capacity\"] / 1000 / 1000 / 1000 / 1000).round(decimals=2)"
+    "ts_traces[\"disk_capacity_tb\"] = (ts_traces[\"disk_capacity\"] / 1000 / 1000 / 1000 / 1000).round(decimals=2)\n",
+    "\n",
+    "ts_trace_0 = ts_traces[ts_traces[\"action_name\"] == 11]\n",
+    "ts_trace_simulation = ts_traces[ts_traces[\"action_name\"] != 11]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "7d474f19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_trace_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ab27ff3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_trace_simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c4dca44f",
    "metadata": {},
    "outputs": [],
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5b600661",
    "metadata": {},
    "outputs": [],
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fa201185",
    "metadata": {},
    "outputs": [],
@@ -240,9 +248,18 @@
     "        ts_trace_1 = ts_trace_1[[\"storage_hostname\", \"disk_id\", \"disk_capacity\", \"disk_free_space\", \"percent_free\", \"disk_capacity_tb\"]].sort_values([\"storage_hostname\", \"disk_id\"])\n",
     "        ts_trace_1 = ts_trace_1.reset_index()\n",
     "        ts_trace_1 = ts_trace_1.drop(\"index\", axis=1)\n",
+    "        ts_trace_1 = ts_trace_1.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
     "        \n",
     "        # servers.update(ts_trace_1_by_server)\n",
+    "        global disks\n",
+    "        disks = disks.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
     "        disks.update(ts_trace_1)\n",
+    "        disks = disks.reset_index()\n",
+    "        \n",
+    "        #n_disks = pd.concat([disks,ts_trace_1]).drop_duplicates(['storage_hostname','disk_id'],keep='last')\n",
+    "        #n_disks = n_disks.reset_index()\n",
+    "        #n_disks = n_disks.drop(\"index\", axis=1)\n",
+    "        # disks.update(ts_trace_1)\n",
     "        \n",
     "        # servers_source = servers\n",
     "        disks_source.data = disks\n",
@@ -273,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "858743ca",
    "metadata": {},
    "outputs": [],
@@ -283,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "23c9773f",
    "metadata": {},
    "outputs": [],
@@ -294,44 +311,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0b1d8f58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_trace_1 = ts_traces[ts_traces[\"ts\"] == unique_ts[5]]\n",
+    "ts_trace_1 = ts_traces[ts_traces[\"ts\"] == unique_ts[1]]\n",
     "ts_trace_1 = ts_trace_1[[\"storage_hostname\", \"disk_id\", \"disk_capacity\", \"disk_free_space\", \"percent_free\", \"disk_capacity_tb\"]].sort_values([\"storage_hostname\", \"disk_id\"])\n",
     "ts_trace_1 = ts_trace_1.reset_index()\n",
     "ts_trace_1 = ts_trace_1.drop(\"index\", axis=1)\n",
+    "ts_trace_1 = ts_trace_1.sort_values([\"storage_hostname\", \"disk_id\"])\n",
+    "ts_trace_1 = ts_trace_1.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
     "ts_trace_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "8c06ed56",
+   "execution_count": null,
+   "id": "156a8c74",
    "metadata": {},
    "outputs": [],
    "source": [
+    "disks = disks.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
     "disks.update(ts_trace_1)\n",
+    "disks = disks.reset_index()\n",
+    "\n",
     "disks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2751d518",
+   "id": "16a1b863",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45af5eb9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "disks = pd.concat([disks,ts_trace_1]).drop_duplicates(['storage_hostname','disk_id'],keep='last')\n",
+    "disks = disks.reset_index()\n",
+    "disks = disks.drop(\"index\", axis=1)\n",
+    "disks"
+   ]
   }
  ],
  "metadata": {
@@ -350,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
