Fixing the tree map visu for the lustreAlgorithm (a new use cas is that mulitple parts of a striped file can go to the same disk_id, thus adding duplicate in the dataframe index (storage_hostname + disk_id). Also added a smaller config file and a smaller set of fake jobs for testing.

--- a/bokeh_server/TreeMap.ipynb
+++ b/bokeh_server/TreeMap.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## IMPORT IO TRACES AND CREATE TWO DATAFRAMES\n",
     "\n",
-    "columns = [\"ts\", \"storage_service_name\", \"storage_hostname\", \"disk_id\", \"disk_capacity\", \"disk_free_space\"]\n",
+    "columns = [\"ts\", \"storage_service_name\", \"storage_hostname\", \"disk_id\", \"disk_capacity\", \"disk_free_space\", \"file_name\"]\n",
     "\n",
     "\"\"\"\n",
     "io_traces = None\n",
@@ -147,6 +147,7 @@
     "BYTE_FORMATTER = NumeralTickFormatter(format='0.0b')\n",
     "\n",
     "X, Y, W, H = 0, 0, 1800, 1000\n",
+    "disks = None\n",
     "\n",
     "\n",
     "def treemap(df, col, x, y, dx, dy):\n",
@@ -162,8 +163,19 @@
     "    \"\"\"Prepare generic source from dataframe\"\"\"\n",
     "    \n",
     "    ts_trace_1 = ts_traces[ts_traces[\"ts\"] == unique_ts[index]]\n",
-    "    ts_trace_1 = ts_trace_1[[\"storage_hostname\", \"disk_id\", \"disk_capacity\", \"disk_free_space\", \"percent_free\", \"disk_capacity_tb\"]]\n",
-    "    ts_trace_1_by_server = ts_trace_1[[\"storage_hostname\", \"disk_id\", \"disk_capacity\"]].groupby(\"storage_hostname\").sum(\"disk_capacity\").sort_values([\"storage_hostname\"])\n",
+    "    ts_trace_1 = ts_trace_1[\n",
+    "        [\n",
+    "            \"storage_hostname\", \n",
+    "            \"disk_id\", \n",
+    "            \"disk_capacity\", \n",
+    "            \"disk_free_space\", \n",
+    "            \"percent_free\", \n",
+    "            \"disk_capacity_tb\", \n",
+    "            \"file_name\"\n",
+    "        ]\n",
+    "    ]\n",
+    "    ts_trace_1_by_server = (ts_trace_1[[\"storage_hostname\", \"disk_id\", \"disk_capacity\", \"file_name\"]]\n",
+    "                            .groupby(\"storage_hostname\").sum(\"disk_capacity\").sort_values([\"storage_hostname\"]))\n",
     "    \n",
     "    blocks_by_server = treemap(ts_trace_1_by_server, \"disk_capacity\", X, Y, W, H)\n",
     "\n",
@@ -176,26 +188,26 @@
     "    blocks[\"ytop\"] = blocks.y + blocks.dy\n",
     "    \n",
     "    internal_blocks = blocks.copy()\n",
-    "    internal_blocks[\"x\"] = internal_blocks[\"x\"] + 4\n",
-    "    internal_blocks[\"y\"] = internal_blocks[\"y\"] + 4\n",
-    "    internal_blocks[\"dx\"] = internal_blocks[\"dx\"] - 8\n",
-    "    internal_blocks[\"dy\"] = internal_blocks[\"dy\"] - 8\n",
+    "    internal_blocks[\"x\"] = internal_blocks[\"x\"] + 5\n",
+    "    internal_blocks[\"y\"] = internal_blocks[\"y\"] + 5\n",
+    "    internal_blocks[\"dx\"] = internal_blocks[\"dx\"] - 10\n",
+    "    internal_blocks[\"dy\"] = internal_blocks[\"dy\"] - 10\n",
     "    \n",
-    "    internal_blocks = internal_blocks.sort_values([\"storage_hostname\",\"disk_id\"])\n",
+    "    internal_blocks = internal_blocks.sort_values([\"storage_hostname\", \"disk_id\", \"file_name\"])\n",
     "    internal_blocks = internal_blocks.reset_index(drop=True)\n",
     "    internal_blocks = internal_blocks.drop(\"index\", axis=1)\n",
-    " \n",
     "    \n",
     "    return (blocks_by_server, internal_blocks)\n",
     "\n",
     "\n",
     "def bkapp(doc):\n",
-    "    \n",
+    "        \n",
     "    # Get a color map with 100 colors ranging from green to red\n",
     "    colors = [\"#3aeb34\", \"#ffba26\", \"#ff2a26\"][::-1]\n",
     "    cmap = matplotlib.colors.LinearSegmentedColormap.from_list(\"cmap_green_red\", colors, N=100)\n",
     "    hex_color_map = [matplotlib.colors.rgb2hex(cmap(i)) for i in range(cmap.N)]\n",
     "    \n",
+    "    global disks\n",
     "    servers, disks = compute_dfs(ts_traces, 0)\n",
     "    servers_source = ColumnDataSource(servers)\n",
     "    disks_source = ColumnDataSource(disks)\n",
@@ -245,15 +257,26 @@
     "        index = trace_id.value\n",
     "        \n",
     "        ts_trace_1 = ts_traces[ts_traces[\"ts\"] == unique_ts[index]]\n",
-    "        ts_trace_1 = ts_trace_1[[\"storage_hostname\", \"disk_id\", \"disk_capacity\", \"disk_free_space\", \"percent_free\", \"disk_capacity_tb\"]].sort_values([\"storage_hostname\", \"disk_id\"])\n",
+    "        ts_trace_1 = ts_trace_1[[\"storage_hostname\", \"disk_id\", \"disk_capacity\", \"disk_free_space\", \"percent_free\", \"disk_capacity_tb\", \"file_name\"]].sort_values([\"storage_hostname\", \"disk_id\", \"file_name\"])\n",
     "        ts_trace_1 = ts_trace_1.reset_index()\n",
     "        ts_trace_1 = ts_trace_1.drop(\"index\", axis=1)\n",
     "        ts_trace_1 = ts_trace_1.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
+    "        ts_trace_1 = ts_trace_1.groupby([\"storage_hostname\", \"disk_id\"]).agg(\n",
+    "            {\n",
+    "                \"disk_capacity\": \"first\", \n",
+    "                \"disk_free_space\": \"first\",\n",
+    "                \"percent_free\": \"first\",\n",
+    "                \"disk_capacity_tb\": \"first\",\n",
+    "                \"file_name\": ', '.join\n",
+    "            }\n",
+    "        )\n",
+    "        print(ts_trace_1)\n",
     "        \n",
     "        # servers.update(ts_trace_1_by_server)\n",
     "        global disks\n",
     "        disks = disks.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
     "        disks.update(ts_trace_1)\n",
+    "        print(disks)\n",
     "        disks = disks.reset_index()\n",
     "        \n",
     "        #n_disks = pd.concat([disks,ts_trace_1]).drop_duplicates(['storage_hostname','disk_id'],keep='last')\n",
@@ -292,7 +315,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "858743ca",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "show(bkapp) # notebook_url=\"http://localhost:8888\" "
@@ -302,7 +327,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "23c9773f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "servers, disks = compute_dfs(ts_traces, 0)\n",
@@ -317,11 +344,20 @@
    "outputs": [],
    "source": [
     "ts_trace_1 = ts_traces[ts_traces[\"ts\"] == unique_ts[1]]\n",
-    "ts_trace_1 = ts_trace_1[[\"storage_hostname\", \"disk_id\", \"disk_capacity\", \"disk_free_space\", \"percent_free\", \"disk_capacity_tb\"]].sort_values([\"storage_hostname\", \"disk_id\"])\n",
+    "ts_trace_1 = ts_trace_1[[\"storage_hostname\", \"disk_id\", \"disk_capacity\", \"disk_free_space\", \"percent_free\", \"disk_capacity_tb\", \"file_name\"]].sort_values([\"storage_hostname\", \"disk_id\"])\n",
     "ts_trace_1 = ts_trace_1.reset_index()\n",
     "ts_trace_1 = ts_trace_1.drop(\"index\", axis=1)\n",
     "ts_trace_1 = ts_trace_1.sort_values([\"storage_hostname\", \"disk_id\"])\n",
     "ts_trace_1 = ts_trace_1.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
+    "ts_trace_1 = ts_trace_1.groupby([\"storage_hostname\", \"disk_id\"]).agg(\n",
+    "    {\n",
+    "        \"disk_capacity\": \"first\", \n",
+    "        \"disk_free_space\": \"first\",\n",
+    "        \"percent_free\": \"first\",\n",
+    "        \"disk_capacity_tb\": \"first\",\n",
+    "        \"file_name\": ', '.join\n",
+    "    }\n",
+    ")\n",
     "ts_trace_1"
    ]
   },
@@ -332,10 +368,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disks = disks.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
-    "disks.update(ts_trace_1)\n",
     "disks = disks.reset_index()\n",
-    "\n",
+    "disks = disks.drop(\"index\", axis=1)\n",
+    "disks = disks.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
+    "disks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bec161ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disks.update(ts_trace_1)\n",
     "disks"
    ]
   },
@@ -351,6 +397,14 @@
     "disks = disks.drop(\"index\", axis=1)\n",
     "disks"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44f36765",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -369,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
