Working on how to display the names of all files parts/allocation blocks currently positioned on a given OST/drive (by updating the dataframes only when necessary and adding/removing file names depending on the current operation). Not a success yet...

--- a/bokeh_server/TreeMap.ipynb
+++ b/bokeh_server/TreeMap.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a326ad56",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import yaml\n",
@@ -33,14 +35,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "068513b1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "## IMPORT IO TRACES AND CREATE TWO DATAFRAMES\n",
     "\n",
     "columns = [\"ts\", \"storage_service_name\", \"storage_hostname\", \"disk_id\", \"disk_capacity\", \"disk_free_space\", \"file_name\"]\n",
+    "dtypes = {\n",
+    "    \"ts\": \"Float64\", \n",
+    "    \"storage_service_name\": \"string\", \n",
+    "    \"storage_hostname\": \"string\", \n",
+    "    \"disk_id\": \"string\", \n",
+    "    \"disk_capacity\": \"UInt64\",\n",
+    "    \"disk_free_space\": \"UInt64\",\n",
+    "    \"file_name\": \"string\"\n",
+    "}\n",
     "\n",
     "\"\"\"\n",
     "io_traces = None\n",
@@ -51,15 +64,17 @@
     "ts_traces\n",
     "\"\"\"\n",
     "\n",
-    "ts_traces = pd.read_csv(\"timestamped_io_operations.csv\", sep=\",\", header=0)\n",
+    "ts_traces = pd.read_csv(\"timestamped_io_operations.csv\", sep=\",\", header=0, dtype=dtypes)\n",
     "ts_traces\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f50b88c9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "ts_traces = ts_traces.sort_values(by=[\"ts\", \"storage_service_name\"])\n",
@@ -73,9 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7d474f19",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "ts_trace_0"
@@ -83,9 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4ab27ff3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "ts_trace_simulation"
@@ -93,9 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c4dca44f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -109,9 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5b600661",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -133,9 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fa201185",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -244,6 +269,7 @@
     "            (\"Disk\", \"@disk_id\"),\n",
     "            (\"Free space (%)\", \"@percent_free\"),\n",
     "            (\"Free space (Bytes)\", \"@disk_free_space\"),\n",
+    "            (\"File\", \"@file_name\")\n",
     "        ]\n",
     "    )\n",
     "    hover.renderers = [disk_blk]\n",
@@ -275,8 +301,19 @@
     "        # servers.update(ts_trace_1_by_server)\n",
     "        global disks\n",
     "        disks = disks.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
+    "        temp_file_name = disks[\"file_name\"].copy(deep=True)\n",
     "        disks.update(ts_trace_1)\n",
+    "        print(\"### Disks after update\")\n",
+    "        \n",
+    "        print(\"##########################\")\n",
+    "        disks[\"previous_file_name\"] = temp_file_name\n",
     "        print(disks)\n",
+    "        disks[\"file_name\"] = disks[\"previous_file_name\"] + \", \" + disks[\"file_name\"]\n",
+    "        # disks[\"previous_file_name\", \"file_name\"].apply(lambda x: \", \".join(x), axis=1)\n",
+    "        # disks.drop(\"previous_filename\", axis=1)\n",
+    "        print(\"####### Disks after apply\")\n",
+    "        print(disks)\n",
+    "        print(\"###########################2\")\n",
     "        disks = disks.reset_index()\n",
     "        \n",
     "        #n_disks = pd.concat([disks,ts_trace_1]).drop_duplicates(['storage_hostname','disk_id'],keep='last')\n",
@@ -313,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "858743ca",
    "metadata": {
     "scrolled": false
@@ -325,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "23c9773f",
    "metadata": {
     "scrolled": true
@@ -340,7 +377,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0b1d8f58",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "ts_trace_1 = ts_traces[ts_traces[\"ts\"] == unique_ts[1]]\n",
@@ -365,7 +404,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "156a8c74",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "disks = disks.reset_index()\n",
@@ -378,7 +419,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bec161ba",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "disks.update(ts_trace_1)\n",
@@ -389,7 +432,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "16a1b863",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "disks = pd.concat([disks,ts_trace_1]).drop_duplicates(['storage_hostname','disk_id'],keep='last')\n",
@@ -402,7 +447,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "44f36765",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": []
   }
